# PBoule

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GUIDE_ORGANISATEUR.md  LICENSE  LICENSES  Makefile  PBOULE.md  PETANQUE.md  README.md  creation_logo_petanque.md  environment.yml  logo.yaml  pyproject.toml
.github/workflows/: ci.yml
python/: bump_version.py  compute_logo_yaml.py  extract_changelog.py  generate_feuille_inscription.py  generate_feuille_poule.py  generate_pages.py  generate_phases_finales.py  logos.py
python/pboule/: __init__.py  palette.py  poules.py  utils.py
scripts/: extract_changelog.py  generate_pages.py
